# colm

./: .gitignore  CLAUDE.md  CREDITS  Makefile.am  README.md  autogen.sh  colm.vim  configure.ac  configure.in
.github/workflows/: binaries.yml  build-test.yml  release.yml  test.yml
aapl/: Makefile.am
cgil/: rlhc-go.lm  rlhc-rust.lm
colm/: .gitignore  tree.c
doc/colm/: 0_00_welcome.adoc  0_03_commandline.adoc  0_04_hello_world.adoc
doc/colm/code/: assign.lm
libfsm/: Makefile.am  action.h  allocgen.cc  asm.cc  binvar.cc  codegen.h  common.cc  fsmgraph.h  gendata.cc  gotoloop.cc  idbase.cc  idbase.h  parsedata.h
ragel/: Makefile.am
src/: .gitignore  CMakeLists.txt  Makefile.am  bytecode.c  bytecode.h  closure.cc  codevect.c  colm-wrap.sh  colm.lm  compiler.cc  compiler.h  consinit.cc  declare.cc  exports.cc  input.c  input.h  iter.c  loadcolm.cc  loadfinal.cc  loadinit.cc  loadinit.h  lookup.cc  main.cc  parser.cc  parser.h  parsetree.h  pdabuild.cc  pdacodegen.cc  pdacodegen.h  pdarun.c  program.h  redbuild.cc  redfsm.cc  redfsm.h  resolve.cc  stream.c  synthesis.cc  tree.c  tree.h  version.h.in
src/aapl/: astring.h  bubblesort.h  insertsort.h  mergesort.h  quicksort.h  svector.h  vector.h
src/cgil/: Makefile.am  ril.lm  rlhc-c.lm  rlhc-crack.lm  rlhc-csharp.lm  rlhc-d.lm  rlhc-go.lm  rlhc-java.lm  rlhc-js.lm  rlhc-julia.lm  rlhc-ocaml.lm  rlhc-ruby.lm  rlhc-rust.lm
src/cgil/test/: .gitignore  Makefile.am  runtests.in
src/cgil/test/cases/: .gitignore  test-c-00.c  test-crack-00.crack  test-d-00.d  test-go-00.go  test-js-00.js  test-julia-00.julia  test-ocaml-00.ocaml  test-ruby-00.ruby  test-rust-00.ri  test-rust-00.rust
src/libfsm/: .gitignore  Makefile.am  action.h  allocgen.cc  asm.cc  asm.h  codegen.cc  codegen.h  common.cc  common.h  dot.cc  flatvar.cc  fsmap.cc  fsmbase.cc  fsmgraph.h  gendata.cc  gendata.h  goto.cc  gotoexp.cc  idbase.cc  ipgoto.cc  parsedata.h  switchvar.cc  tabbreak.cc  tabgoto.cc  tabvar.cc
test/: .gitignore  Makefile.am  dist.sh
test/aapl.d/: Makefile.am  test_string.exp
test/colm.d/: Makefile.am  balance1.lm  balance2.lm  balance3.lm  ext1.lm  gentests.sh  redef1.lm  redef2.lm  redef3.lm  redef4.lm  redef5.lm  sendstream.lm  stds1.lm
test/cxx/: .gitignore
test/diff/: .gitignore
test/dnstools/: .gitignore
test/html/: .gitignore
test/http/: .gitignore
test/mediawiki/: .gitignore
test/python/: .gitignore
test/rlhc.d/: Makefile.am
test/rlparse.d/: Makefile.am  load.cc  vector.h
test/ruby/: .gitignore
test/trans.d/: Makefile.am  actparams.cc  gentests
test/xml/: .gitignore
